fix: add css text truncate on link card

--- a/apps/web/components/ui/category-card/category-link.module.scss
+++ b/apps/web/components/ui/category-card/category-link.module.scss
@@ -21,6 +21,10 @@
 
       & > p {
          font-size: 0.7rem;
+         padding-right: 0.5rem;
+         overflow: hidden;
+         text-overflow: ellipsis;
+         white-space: nowrap;
       }
    }
 }
